--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ html {
     background-color: #FAEBD7;
     height: 500px;
     width: 500px;
-    border-radius: 10px;
     display: flex;
     margin: auto;
     align-items: center;
@@ -29,8 +28,6 @@ html {
 
 .square {
     display: flex;
-    border: 1px solid black;
-    /* height: 10.1px;
-    width: 10px; */
+    /* border: 1px solid black; */
 }
 
