--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html {
   }
     
    body {
-    display: flex;
     font-family: sans-serif;
     padding: 30px;
   } 
@@ -31,3 +30,10 @@ html {
     /* border: 1px solid black; */
 }
 
+h1 {
+  text-align: center;
+}
+
+button {
+  margin-top: 10px;
+}
