--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ html {
     
    body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    color: rgb(255, 251, 251);
+    text-shadow: rgb(0, 0, 0) 0 0 5px;;
   } 
   
 .main-container {
@@ -31,8 +32,8 @@ html {
   display: flex;
   flex-direction: row;
   transition: all .3s ease;
-  height: 15px;
-  width: 15px;
+  height: 13px;
+  width: 13px;
   margin: 2px;
   box-shadow: black 0 0 2px;
 }
@@ -44,6 +45,8 @@ html {
 
 .draw-option {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 400px;
   align-items: center;
   margin: 3px;
 }
@@ -86,7 +89,7 @@ input {
   width: 394px;
   padding: 3px;
   padding-top: 1px;
-  padding-bottom: 0;
+  padding-bottom: 0.7px;
   margin: auto;
   margin-bottom: 5px;
   box-shadow: black 0 0 5px;
@@ -96,8 +99,16 @@ input {
 .slider {
   appearance: none;
   width: 100%; /* Full-width */
-  height: 5px; /* Specified height */
+  height: 3px; /* Specified height */
   background: rgb(245, 244, 244); 
   outline: none; /* Remove outline */
   opacity: 0.8; 
+}
+.footer {
+  display: flex;
+  margin: 20px;
+  margin-bottom: 0;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
