--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 10px;
+    font-size: 20px;
     background: url('../images/background.jpg') bottom center;
     background-size: cover;
   }
@@ -7,15 +7,15 @@ html {
    body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(255, 251, 251);
-    text-shadow: rgb(0, 0, 0) 0 0 5px;;
+    text-shadow: #000000 0 0 5px;
   } 
   
 .main-container {
     display: flex;
     flex-direction: column;
     background-color: rgb(245, 244, 244);
-    height: 400px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
     margin: auto;
     align-items: center;
     justify-content: center;
@@ -32,8 +32,8 @@ html {
   display: flex;
   flex-direction: row;
   transition: all .3s ease;
-  height: 13px;
-  width: 13px;
+  height: 15px;
+  width: 15px;
   margin: 2px;
   box-shadow: black 0 0 2px;
 }
@@ -46,7 +46,7 @@ html {
 .draw-option {
   display: flex;
   flex-wrap: wrap;
-  max-width: 400px;
+  max-width: 500px;
   align-items: center;
   margin: 3px;
 }
@@ -86,7 +86,7 @@ input {
 .slidecontainer {
   display: flex;
   align-items: center;
-  width: 394px;
+  width: 494px;
   padding: 3px;
   padding-top: 1px;
   padding-bottom: 0.7px;
@@ -97,11 +97,12 @@ input {
 }
 
 .slider {
+  
   appearance: none;
-  width: 100%; /* Full-width */
-  height: 3px; /* Specified height */
+  width: 100%;
+  height: 15px;
   background: rgb(245, 244, 244); 
-  outline: none; /* Remove outline */
+  outline: none;
   opacity: 0.8; 
 }
 .footer {
