--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,9 @@ h1 {
 }
 
 .button {
-  height: 20px;
-  width: 70px;
+  font-size: 20px;
+  width: 80px;
+  padding: 3px;
   margin-top: 10px;
   border-radius: 2px;
   color: rgb(129, 128, 128);
